example/user-guides/ingress-controller/ingress-controller-ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: kube-system
spec:
  rules:
    - host: ing.talcoding.com
      http:
        paths:
          - backend:
              serviceName: ingress-nginx
              servicePort: 10254
